# serenita_app

./: .coverage  .gitignore  README.md  collect_code.py  config.toml  main.py  pyproject.toml
app/: navigation_service.py
app/common/: __init__.py  error_handler.py
app/core/: __init__.py  analytics_logic.py  builders.py  business_logic.py  config_service.py  constants.py  context.py  database.py  icon_manager.py  logger.py  migrations.py  seeder.py  signals.py  theme_manager.py  topic_parser.py
app/models/: cycle.py  exam.py  session.py  subject.py  user.py
app/services/: __init__.py  analytics_service.py  base_service.py  cycle_service.py  cycle_subject_service.py  exam_service.py  interfaces.py  master_subject_service.py  performance_service.py  session_service.py  study_queue_service.py  template_subject_service.py  user_service.py  work_unit_service.py
docs/: App-Walkthrough.md  Data-and-Storage.md  Developer-Section.md  Home.md  Installation-and-Environment.md  Profiles-and-Simulation.md  Troubleshooting.md  running_in_dev_mode.md  serenita_app_test.md
docs/pytest-qt/: integration_test_plan.md
lib/: long_term_user_seed.sql
migrations/: 001_initial_schema.sql  002_cleanup_subject_model.sql  003_add_theme_to_users.sql  004_add_questions_to_study_sessions.sql
tests/: conftest.py
tests/core/: test_analytics.py  test_analytics_logic.py  test_builders.py  test_business_logic.py
tests/services/: test_analytics_service.py  test_cycle_service.py  test_cycle_subject_service.py  test_exam_service.py  test_master_subject_service.py  test_session_service.py  (+6 more)
(+146 files in other folders)
